# sweetie_bot

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  LICENSE  README  README.md  docker-build.bash  flexbe_config.json  install.bash  package.xml  postinst  repository.key
behavior/sweetie_bot_gait_generator/: CMakeLists.txt  README.md  package.xml  setup.py
behavior/sweetie_bot_gait_generator/action/: MoveBase.action
behavior/sweetie_bot_gait_generator/scripts/: pronk_forward.py  raise_leg1.py  raise_leg4.py  repeat_motion.py  shift_left.py  to_nominal.py  trot_forward.py  turn_left.py  turn_right.py  walk  walk_backward.py  walk_forward.py  walk_forward2.py  walk_forward_free.py
behavior/sweetie_bot_gait_generator/src/: gait_generator.cpp  gait_generator.hpp  towr_trajectory_visualizer.cpp  visualizer.cpp
behavior/sweetie_bot_gait_generator/srv/: DisplayMarkers.srv  SaveTrajectory.srv
behavior/sweetie_bot_gait_generator_msgs/: CMakeLists.txt
behavior/sweetie_bot_proto2_movements/: CMakeLists.txt  README.md  package.xml
behavior/sweetie_bot_proto2_movements/joint_trajectories/: aborted.json  applause.json  begone.json  begone3.json  bow_begin.json  bow_end.json  brohoof_begin.json  brohoof_end.json  buck3.json  bull.json  crouch.json  crouch_begin.json  crouch_end.json  crouch_front.json  dance14.json  farewell.json  greeting.json  head_lean_forward_begin.json  head_lean_forward_end.json  head_node.json  head_shake.json  head_shake_emphasized.json  head_shake_slow.json  head_suprised.json  head_suprised_aborted.json  head_suprised_slow.json  head_turn_right.json  hoof_stamp.json  hoof_wave.json  introduce_herself.json  little_shake_fast.json  little_shake_slow.json  look_around.json  look_on_hoof.json  look_on_printer.json  look_on_printer_fast.json  menace.json  menace_canceled.json  prance.json  seizure.json  (+3 more)
behavior/sweetie_bot_soar/: CMakeLists.txt  README.md  package.xml  setup.py
behavior/sweetie_bot_soar/content/: quest_full.yaml  quiz_foe.yaml  quiz_full.yaml
behavior/sweetie_bot_soar/quests/: quest_example.yaml  quest_full.yaml
behavior/sweetie_bot_soar/scripts/: quest_animation_tags.py  quest_check_sounds.py  quest_translator.py  quiz_translator.py  soar  soar-launcher
behavior/sweetie_bot_soar/soar/: talker.soar  test.soar  test_llm.soar  unified-proto2.soar  unified-proto3.soar  unified.soar  walker.soar
behavior/sweetie_bot_soar/src/: soar-node
behavior/sweetie_bot_text_msgs/: CMakeLists.txt  package.xml
behavior/sweetie_bot_text_msgs/action/: TextAction.action
behavior/sweetie_bot_text_msgs/info/: CompleteRequest.yaml  TranslateRequest.yaml
behavior/sweetie_bot_text_msgs/msg/: CompoundAction.msg  CompoundActionElement.msg  DetectedLanguage.msg  Detection.msg  DetectionArray.msg  SoundEvent.msg  SpeechVisualization.msg  TextCommand.msg
behavior/sweetie_bot_text_msgs/srv/: Classification.srv  Complete.srv  CompleteRaw.srv  CompleteSimple.srv  LibreTranslate.srv  Transcribe.srv  Translate.srv
behavior/sweetie_bot_voice/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
behavior/sweetie_bot_voice/config/: test.yaml
behavior/sweetie_bot_voice/launch/: test.launch  voice.launch
behavior/sweetie_bot_voice/nodes/: voice
behavior/sweetie_bot_voice/scripts/: logger  rhvoice.sh  rhvoice_robotized.sh  tts_api_service_node  voice
behavior/sweetie_bot_voice/service/: sweetie_bot_voice.service
behaviors/behavior_cheer/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_czequestriapresentationmenace/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_derpfest2017presentation/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_derpfest2017presentation1/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_dotricks/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_example_behavior/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_play/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_sweetie_bot_flexbe_test/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_sweetiebotonchequesruia/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_sweetieonponirebrik/: CMakeLists.txt  package.xml  setup.py
config/sweetie_bot_deploy/: CMakeLists.txt  README.md  package.xml  store  sweetie-bot-core
config/sweetie_bot_deploy/common/: config.lua  config_extra.lua  reporting.lua  (+1 more)
config/sweetie_bot_proto2_deploy/: CMakeLists.txt  README.md  package.xml
config/sweetie_bot_proto3_deploy/: CMakeLists.txt  README.md  package.xml
deployment/sweetie_bot_config/: CMakeLists.txt  conv_servos.py  package.xml  sweetie-bot-core
deployment/sweetie_bot_deploy/: CMakeLists.txt  package.xml  sweetie-bot-core
flexbe_behaviors/: package.xml
flexbe_behaviors/behaviors/: behavior_bad.xml  behavior_brohoof.xml  behavior_cheer.xml  behavior_czequestriapresentationgreeting.xml  behavior_czequestriapresentationmenace.xml  behavior_czequestriapresentationstatemachines.xml  behavior_derpfest2017presentation.xml  behavior_derpfest2017presentation1.xml  behavior_derpfest2017presentation2.xml  behavior_derpfest2017presentation3.xml  behavior_derpfest2017presentation4.xml  behavior_discordgreeting.xml  behavior_dogoodtricks.xml  behavior_dotricks.xml  behavior_example_behavior.xml  behavior_greeting.xml  behavior_play.xml  behavior_sweetie_bot_flexbe_test.xml  behavior_sweetiebotonchequesruia.xml  behavior_sweetieonponirebrik.xml  behavior_switchevilmode.xml  behavior_test_leap_motion.xml  behavior_watchpresentaion.xml
hardware/sweetie_bot_battery_monitor/: CMakeLists.txt  package.xml  setup.py
sweetie_bot_flexbe_states/: .package.xml.swp  README.md  package.xml  setup.py
sweetie_bot_flexbe_states/tests/: leap_motion_monitor_still.test  moveit_to_pose.test  moveit_to_pose2.test  moveit_to_pose2_approx.test  moveit_to_pose2_failed.test  moveit_to_pose2_reached.test  moveit_to_pose_approx.test  moveit_to_pose_failed.test  moveit_to_pose_reached.test  sweetie_bot_follow_head_pose_smart.test
(+1202 files in other folders)
