<package format="2">
  <name>face_recognition</name>
  <version>0.0.1</version>
  <description>
    OpenMV face and eyes recognition JSON bridge
  </description>
  <author>XDN</author>
  <maintainer email="xdnmail@gmail.com">XDN</maintainer>
  <license>GPL</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
