<package>
  <name>flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     flexbe_behaviors references all implemented behaviors.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <!-- Add here all ROS packages that contain behaviors -->
  <run_depend>behavior_sweetie_bot_flexbe_test</run_depend>
  <run_depend>behavior_discordgreeting</run_depend>
  <run_depend>behavior_sweetieonponirebrik</run_depend>
  <run_depend>behavior_greeting</run_depend>
  <run_depend>behavior_dotricks</run_depend>
  <run_depend>behavior_cheer</run_depend>
  <run_depend>behavior_play</run_depend>
  <run_depend>behavior_bad</run_depend>
  <run_depend>behavior_test_leap_motion</run_depend>
  <run_depend>behavior_sweetiebotonchequesruia</run_depend>
  <run_depend>behavior_brohoof</run_depend>
  <run_depend>behavior_switchevilmode</run_depend>
</package>
