<package>
  <name>sweetie_bot_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     sweetie_bot_flexbe_states provides a collection of states for SweetiBot robot
  </description>
  <maintainer email="goncharovoi@yandex.ru">disrecord</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>sweetie_bot_text_msgs</run_depend>

</package>
