<?xml version="1.0"?>
<package format="2">
  <name>sweetie_bot_gait_generator</name>
  <version>0.0.0</version>
  <description>TOWR based gait generator for SweetieBot robot.</description>

  <maintainer email="goncharovoi@yandex.ru">disRecord</maintainer>

  <license>BSD</license>

  <url type="website">http://sweetiebot.net</url>
  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis/home</url>

  <author email="goncharovoi@yandex.ru">disRecord</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- ROS and OROCOS packages -->
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>actionlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>kdl_conversions</depend> 
  <depend>eigen_conversions</depend> 
  <depend>xpp_states</depend>
  <depend>towr</depend>
  <depend>towr_ros</depend>
  <!-- ROS and OROCOS datatypes -->
  <depend>xpp_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_orocos_misc</depend>
  <!-- SWEETIEBOT datatypes -->
  <depend>sweetie_bot_control_msgs</depend> 

  <exec_depend>xpp_vis</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
