<?xml version="1.0"?>
<package format="2">
  <name>sweetie_bot_soar</name>
  <version>0.0.0</version>
  <description>SOAR integration package for SweetieBot robot.</description>
  <maintainer email="goncharovoi@yandex.ru">disRecord</maintainer>
  <license>BSD</license>
  <url type="website">sweetiebot.net</url>
  <author email="goncharovoi@yandex.ru">disRecord</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>sweetie_bot_control_msgs</exec_depend>
  <exec_depend>sweetie_bot_text_msgs</exec_depend>
  <exec_depend>sweetie_bot_herkulex_msgs</exec_depend>
  <exec_depend>sweetie_bot_joystick</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>flexbe_core</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
