<package format="2">
  <name>sweetie_bot_voice</name>
  <version>1.0.0</version>
  <description>SweetieBot voice node.</description>

  <maintainer email="fsdfur@gmail.com">mutronics</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis/home</url>
  <url type="website">sweetiebot.net</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin_virtualenv</depend>
  <depend>rospy</depend>
  <depend>rospack</depend>
  <depend>sound_play</depend>
  <depend>sweetie_bot_text_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
