<package>
  <name>behavior_cheer</name>
  <version>1.0.0</version>
  <description>
     Sweetie cheering state.
  </description>
  <maintainer email="todo@todo.com">disRecord</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_cheer</url>
  <author>disRecord</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>hector_flexbe_states</run_depend>
  <run_depend>vigir_flexbe_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>sweetie_bot_flexbe_states</run_depend>

</package>