<package>
  <name>behavior_sweetiebotonchequesruia</name>
  <version>1.0.0</version>
  <description>
     SweetieBot beahavior for Cheqestria 2017. 
1. Watch after moving hand.
2. Give leg for brohoof or perform Greeting if hand is still.
3. Perform random action and fall back to random head movements if no object.
  </description>
  <maintainer email="todo@todo.com">disRecord</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_sweetiebotonchequesruia</url>
  <author>disRecord</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sweetie_bot_flexbe_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>

</package>