<package format="2">
  <name>sweetie_bot_proto2_deploy</name>
  <version>1.0.0</version>
  <description>SweetoeBot proto2 specific deployment configuration.</description>
  <maintainer email="goncharovoi@yandex.ru">Oleg Goncharov (disRecord)</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis/deployment</url>

  <author>Oleg Goncharov (disRecord)</author>

  <!-- ROS and OROCOS packages -->
  <depend>catkin</depend>
  <depend>rtt</depend>
  <depend>ocl</depend>
  <!-- ROS and OROCOS datatypes -->
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_deploy</depend>
  <depend>sweetie_bot_deploy_proto2_description</depend>
  <!-- SWEETIEBOT datatypes -->

  <export>
  </export>
</package>
