<package format="2">
  <name>sweetie_bot_deploy</name>
  <version>1.0.0</version>
  <description>SweetoeBot basic deployment scripts</description>
  <maintainer email="goncharovoi@yandex.ru">Oleg Goncharov (disRecord)</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>

  <author>Oleg Goncharov (disRecord)</author>

  <!-- ROS and OROCOS packages -->
  <depend>catkin</depend>
  <depend>rtt</depend>
  <depend>ocl</depend>
  <!-- ROS and OROCOS datatypes -->
  <!-- SWEETIEBOT packages -->
  <!-- SWEETIEBOT datatypes -->

  <export>
  </export>
</package>
